[package]
name = "NetLink"
version = "0.1.0"
edition = "2021"

[dependencies]
rustp2p = "0.1.7"
clap = { version = "=4.0.32", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
tun-rs = { version = "1", features = ["async"] }
pnet_packet = "0.35.0"
ctrlc2 = { version = "3", features = ["tokio", "termination"] }
tokio = { version = "1.39.2", features = ["full"] }
crossbeam-queue = "0.3.11"
bytes = {version = "1.7.2"}
[features]
default = []

[profile.release]
opt-level = 'z'
debug = 0
debug-assertions = false
strip = "debuginfo"
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false