[package]
name = "net_link"
version = "0.2.0"
edition = "2021"

[dependencies]
#rustp2p = {version = "0.1.11",features = ["aes-gcm"]}
rustp2p = { git = "https://github.com/rustp2p/rustp2p.git", features = ["chacha20-poly1305", "aes-gcm"] }

clap = { version = "=4.0.32", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
tun-rs = { version = "1", features = ["async"] }
pnet_packet = "0.35.0"
ctrlc2 = { version = "3", features = ["tokio", "termination"] }
tokio = { version = "1.39.2", features = ["full"] }
crossbeam-queue = "0.3.11"
bytes = { version = "1.7.2" }
net-route = "0.4.4"
futures = "0.3.31"
parking_lot = "0.12"
libc = "0.2.159"
anyhow = "1.0.89"

tabled = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


warp = { version = "0.3.7", optional = true }

async-shutdown = "0.2"
serde_yaml = "0.9"
rust-embed = { version = "8.5", optional = true }
mime_guess = { version = "2.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59" }

[features]
default = ["web"]
web = ["warp", "rust-embed", "mime_guess"]

[profile.release]
opt-level = 'z'
debug = 0
debug-assertions = false
strip = "debuginfo"
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false