workspace = { members = ["netlink_core", "netlink_http"] }
[package]
name = "net_link"
version = "0.2.10"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "NetLink is a decentralized networking tool built on the 'rustp2p' library."
repository = "https://github.com/rustp2p/NetLink"

[dependencies]
netlink_http = { path = "netlink_http" }


clap = { version = "=4.0.32", features = ["derive"] }
log = "0.4"
log4rs = "1.3"
ctrlc2 = { version = "3", features = ["tokio", "termination"] }
tokio = { version = "1.42", features = ["full"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

serde_yaml = "0.9"
rust-embed = { version = "8.5", features = ["compression", "mime-guess"], optional = true }
regex = "1.11"

salvo = { version = "=0.63.1", features = ["cors", "anyhow"] }

[features]
default = ["web"]
web = ["rust-embed"]

[profile.release]
opt-level = 'z'
debug = 0
debug-assertions = false
strip = "debuginfo"
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
