[package]
name = "netlink_core"
version = "0.2.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "netlink_core"
crate-type = [
    "staticlib",
    "cdylib",
    "lib",
]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
#rustp2p = { version = "0.1", features = ["chacha20-poly1305", "aes-gcm"] }
rustp2p = { version = "0.1", features = ["chacha20-poly1305", "aes-gcm"] }

libc = "0.2"
parking_lot = "0.12"
async-shutdown = "0.2"
log = "0.4"

tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

tun-rs = { version = "1", features = ["async"] }

pnet_packet = "0.35"
tachyonix = "0.3"
bytes = "1.8.0"
async-trait = "0.1"
regex = "1.11"

[target.'cfg(any(target_os = "linux", target_os = "macos",target_os = "windows"))'.dependencies]
net-route = "0.4"


[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_NetworkManagement_Ndis"] }