[package]
name = "netlink_core"
version = "0.3.2"
edition = "2021"
license = "Apache-2.0"
description = "NetLink is a decentralized networking tool built on the 'rustp2p' library."
repository = "https://github.com/rustp2p/NetLink"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "netlink_core"
crate-type = [
    "staticlib",
    "cdylib",
    "lib",
]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
#rustp2p = { version = "0.3.1", features = ["chacha20-poly1305-ring", "aes-gcm-ring","use-kcp"] }
rustp2p = { git = "https://github.com/rustp2p/rustp2p", features = ["chacha20-poly1305-ring", "aes-gcm-ring","use-kcp"] }

bytes = "1.10"
tokio-util = {version = "0.7.15",features = ["full"]}
dashmap = {version = "6.1.0"}
libc = "0.2"
parking_lot = "0.12"
async-shutdown = "0.2"
log = "0.4"

tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

tun-rs = { version = "2", features = ["async"] }

pnet_packet = "0.35"
tachyonix = "0.3"
async-trait = "0.1"
regex = "1.11"

route_manager = { version = "0.2.0", features = ["async"] }


[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_NetworkManagement_Ndis"] }
