[package]
name = "netlink_http"
version = "0.2.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

netlink_core = { path = "../netlink_core" }
salvo = { version = "=0.63.1", features = ["cors", "anyhow","jwt-auth"] }
serde_yaml = "0.9"
mime_guess = { version = "2.0" }
parking_lot = "0.12"
anyhow = "1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = "1.41"
log = "0.4.22"
jsonwebtoken = "8.0"
sha256 = "1.5"
time = "0.3"


