[package]
name = "netlink_http"
version = "0.3.2"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "NetLink is a decentralized networking tool built on the 'rustp2p' library."
repository = "https://github.com/rustp2p/NetLink"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

netlink_core = { path = "../netlink_core", version="0.3.2" }
salvo = { version = "0.79.0", features = ["cors", "anyhow"] }
mime_guess = { version = "2.0" }
parking_lot = "0.12"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.42"
log = "0.4.22"
jsonwebtoken = "9.3"
sha2 = "0.10"
time = "0.3"


